force-app/main/default/objects/leaseworks__Payable__c/leaseworks__Payable__c.object-meta.xml
<CustomObject>
    <label>Payables</label>
    <nameField>
        <displayFormat>{YYYY}-PINV-{0000}</displayFormat>
        <label>Payable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>