force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Accounting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Enabled__c</fullName>
    <description>This field indicates if the Accounting is enabled on the lease</description>
    <formula>if(NOT(ISNULL(leaseworks__Global_Accounting_Setting__c)) , leaseworks__Global_Accounting_Setting__r.leaseworks__Accounting_ON__c , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Accounting Enabled</label>
    <type>Checkbox</type>
</CustomField>