force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting Period for Payable JEs</description>
    <label>Accounting Period</label>
    <referenceTo>leaseworks__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>