force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cancellation_Date__c</fullName>
    <description>Date of Cancellation( move from Approved to Cancelled-Pending</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>