force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Company_Lookup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party who is obligated to pay in a financial transaction.</description>
    <inlineHelpText>The party who is obligated to pay in a financial transaction.</inlineHelpText>
    <label>Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>