force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_Comments__c</fullName>
    <description>Users can record internal notes here. These comments are never to be mapped to print on customer-facing documents.</description>
    <inlineHelpText>Users can record internal notes here. These comments are never to be mapped to print on customer-facing documents.</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>