force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__JE_Cancellation_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__JE_Cancellation_Method__c</fullName>
    <label>JE Cancellation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unpost JEs</fullName>
            </value>
            <value>
                <fullName>Reverse JEs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>