force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Lessee</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>