force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Lessee_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party to whom money is to be paid in a financial transaction.</description>
    <inlineHelpText>The party to whom money is to be paid in a financial transaction.</inlineHelpText>
    <label>Payee</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables_New</relationshipName>
    <type>Lookup</type>
</CustomField>