force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Lessor_Contribution_Committed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Contribution_Committed__c</fullName>
    <description>The total amount of the Lessor Contribution committed to (i.e. reserved for) the Payable.</description>
    <inlineHelpText>The total amount of the Lessor Contribution committed to (i.e. reserved for) the Payable.</inlineHelpText>
    <label>Lessor Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>