force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Linked_Transactions__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Linked_Transactions__c</fullName>
    <description>Captures the ID of all transactions (invoices, CM) that contributed to this True Up Amount</description>
    <label>_Linked Transactions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>