force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Amount__c</fullName>
    <description>Editing the ‘Payable Amount’ automatically updates the Payable Line Amount allocations. Please review the payable line items allocations in order to make any edits</description>
    <inlineHelpText>Editing the ‘Payable Amount’ automatically updates the Payable Line Amount allocations. Please review the payable line items allocations in order to make any edits</inlineHelpText>
    <label>Payable Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>