force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Balance__c</fullName>
    <description>This is the amount of the Payable remaining to be paid out</description>
    <formula>IF( OR(ISPICKVAL(leaseworks__Status__c,&#39;Declined&#39;),ISPICKVAL(leaseworks__Status__c,&#39;Cancelled&#39;)),0, leaseworks__Payable_Amount__c - ( leaseworks__Payable_Amount_Paid_Cash__c + leaseworks__Amount_Paid_via_Offset__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount of the Payable remaining to be paid out</inlineHelpText>
    <label>Payable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>