force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Category__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Category__c</fullName>
    <description>System auto-fills the Payable Type(non-editable) information to this field for all types of payables on creation. Users can modify this value on the &apos;Manual Payable&apos; type to identify the purpose of the manual payable created.</description>
    <inlineHelpText>System auto-fills the Payable Type(non-editable) information to this field for all types of payables on creation. Users can modify this value on the &apos;Manual Payable&apos; type to identify the purpose of the manual payable created.</inlineHelpText>
    <label>Payable Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Deposit Refund</fullName>
            </value>
            <value>
                <fullName>MR Claim Event</fullName>
            </value>
            <value>
                <fullName>Manual MR Payable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>MR Reconciliation Refund</fullName>
            </value>
            <value>
                <fullName>MR TrueUp</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest Payable</fullName>
            </value>
            <value>
                <fullName>Security Deposit - MR Refund</fullName>
            </value>
            <value>
                <fullName>Lessor Credit</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Payment on Account Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>