force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Date__c</fullName>
    <inlineHelpText>Enter date of Supplier invoice here</inlineHelpText>
    <label>Payable Date</label>
    <type>Date</type>
</CustomField>