force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Due_Date__c</fullName>
    <description>Enter date that payout is due</description>
    <inlineHelpText>Enter date that payout is due</inlineHelpText>
    <label>Payable Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>