force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Short_Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Short_Comment__c</fullName>
    <description>Enter enter up to 255 characters</description>
    <inlineHelpText>Enter enter up to 255 characters</inlineHelpText>
    <label>Payable Comment</label>
    <type>TextArea</type>
</CustomField>