force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payable_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Type__c</fullName>
    <label>Payable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Deposit Refund</fullName>
                <default>true</default>
                <label>Security Deposit Refund</label>
            </value>
            <value>
                <fullName>MR Claim Event</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>MR Reconciliation Refund</fullName>
            </value>
            <value>
                <fullName>Manual MR Payable</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MR TrueUp</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent Payable</fullName>
            </value>
            <value>
                <fullName>HL/SL-MR Payable</fullName>
            </value>
            <value>
                <fullName>HL/SL-SD Payable</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest Payable</fullName>
            </value>
            <value>
                <fullName>Security Deposit - MR Refund</fullName>
            </value>
            <value>
                <fullName>Lessor Obligation</fullName>
                <isActive>false</isActive>
                <label>Lessor Obligation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>