force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Payables_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payables_Invoice_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payables Invoice Number</label>
    <type>Text</type>
</CustomField>