force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Related_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the link to the Invoice on which the payable is applied/related.</description>
    <inlineHelpText>Indicates the link to the Invoice on which the payable is applied/related.</inlineHelpText>
    <label>Related Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Related Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>