force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Rent_Slip__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rent Slip</label>
    <referenceTo>leaseworks__Rent__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>