force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Reversal_Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reversal_Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The accounting period for the reversal journal entry</description>
    <inlineHelpText>Enter the accounting period for the reversal journal entry. Only open accounting periods will be listed for selection.</inlineHelpText>
    <label>Reversal Accounting Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Calendar_Period__c.leaseworks__Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Calendar_Period__c.leaseworks__Close_Payables__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payables (Reversal Accounting Period)</relationshipLabel>
    <relationshipName>Payables1</relationshipName>
    <type>Lookup</type>
</CustomField>