force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplier_Invoice_Number__c</fullName>
    <description>Enter the invoice number from the supplier invoice document. If not available, create your own reference.</description>
    <inlineHelpText>Enter the invoice number from the supplier invoice document. If not available, create your own reference.</inlineHelpText>
    <label>Supplier Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>