force-app/main/default/objects/leaseworks__Payable__c/fields/leaseworks__Y_hidden_credit_memo_linked__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_credit_memo_linked__c</fullName>
    <label>_Linked Credit Memo</label>
    <length>35</length>
    <type>Text</type>
</CustomField>