force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__CancellationDateNotPrioToPayableDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CancellationDateNotPrioToPayableDate</fullName>
    <active>true</active>
    <description>Cancellation Date cannot be prior to the payable date.</description>
    <errorConditionFormula>leaseworks__Cancellation_Date__c  &lt;  leaseworks__Payable_Date__c</errorConditionFormula>
    <errorMessage>Cancellation Date cannot be prior to the payable date.</errorMessage>
</ValidationRule>