force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__CashSDMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CashSDMandatory</fullName>
    <active>true</active>
    <description>If payable type = &#39;Security Deposit Refund&#39;, then Cash Security Deposit is mandatory</description>
    <errorConditionFormula>AND(isPickVal(leaseworks__Payable_Type__c,&#39;Security Deposit Refund&#39;),
				OR(ISNULL(leaseworks__Cash_Security_Deposit__c),ISBLANK(leaseworks__Cash_Security_Deposit__c)))</errorConditionFormula>
    <errorMessage>Please select a Cash Security Deposit</errorMessage>
</ValidationRule>