force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__InvoiceMandatoryForRebates.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceMandatoryForRebates</fullName>
    <active>true</active>
    <description>Please select an Invoice to be able to create Rebates Payable</description>
    <errorConditionFormula>AND(isPickVal(leaseworks__Payable_Type__c,&#39;Rebate&#39;),
OR(ISNULL(leaseworks__Related_Invoice__c),ISBLANK(leaseworks__Related_Invoice__c)))</errorConditionFormula>
    <errorMessage>Please select an Invoice to be able to create Rebates Payable</errorMessage>
</ValidationRule>