force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__InvoiceShouldBeApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceShouldBeApproved</fullName>
    <active>true</active>
    <description>Rebate Payables can only be applied to Approved Invoices</description>
    <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(leaseworks__Payable_Type__c, &#39;Rebate&#39;),
!(ISPICKVAL(leaseworks__Related_Invoice__r.leaseworks__Status__c , &#39;Approved&#39;))
)</errorConditionFormula>
    <errorMessage>Rebates can only be applied to Approved Invoices</errorMessage>
</ValidationRule>