force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__LoanInstallmentMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LoanInstallmentMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( leaseworks__Loan_Slip__c )</errorConditionFormula>
    <errorDisplayField>leaseworks__Loan_Slip__c</errorDisplayField>
    <errorMessage>Loan installment cannot be removed from loan payable.</errorMessage>
</ValidationRule>