force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__OtherPayableTypeLeaseLesseeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__OtherPayableTypeLeaseLesseeValidation</fullName>
    <active>true</active>
    <description>For &#39;Other&#39; Payable, Lease should belong to the Lessee</description>
    <errorConditionFormula>AND (NOT( ISBLANK( leaseworks__Lease__c )), AND(ISPICKVAL(leaseworks__Payable_Type__c, &#39;Other&#39;), AND(PRIORVALUE(leaseworks__Lease__c)!= leaseworks__Lease__c , leaseworks__Lease__r.leaseworks__Lessee_New__c
!= leaseworks__Lessee_New__c)  ))</errorConditionFormula>
    <errorDisplayField>leaseworks__Lease__c</errorDisplayField>
    <errorMessage>Please select a lease associated with the lessee</errorMessage>
</ValidationRule>