force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__PayableAmtCantExceedLoanSlipAmt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayableAmtCantExceedLoanSlipAmt</fullName>
    <active>true</active>
    <description>Payable Amount cannot exceed Loan Slip Amount</description>
    <errorConditionFormula>leaseworks__Payable_Amount__c &gt; leaseworks__Loan_Slip__r.leaseworks__Total_Loan_Slip_Payable_Amount__c</errorConditionFormula>
    <errorMessage>Total Payable Amount cannot exceed the Loan Slip Amount</errorMessage>
</ValidationRule>