force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__PayableAmtGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayableAmtGreaterThanZero</fullName>
    <active>true</active>
    <description>Payable Amount must be greater than zero</description>
    <errorConditionFormula>NULLVALUE(leaseworks__Payable_Amount__c , 0) &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Payable_Amount__c</errorDisplayField>
    <errorMessage>Payable Amount must be greater than zero</errorMessage>
</ValidationRule>