force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__PayableDueDateGreaterThanPayableDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayableDueDateGreaterThanPayableDate</fullName>
    <active>true</active>
    <description>Payable Due Date must be greater than or equal to the Payable Date</description>
    <errorConditionFormula>leaseworks__Payable_Due_Date__c &lt;  leaseworks__Payable_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Payable_Due_Date__c</errorDisplayField>
    <errorMessage>Payable Due Date must be greater than or equal to the Payable Date</errorMessage>
</ValidationRule>