force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__PreventMRClaimPayableAmountUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PreventMRClaimPayableAmountUpdate</fullName>
    <active>true</active>
    <description>Please decline this and create a new payable with the corrected amount.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c,
    ISCHANGED( leaseworks__Payable_Amount__c ),
    ISPICKVAL(leaseworks__Payable_Type__c, &#39;MR Claim Event&#39;)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Payable_Amount__c</errorDisplayField>
    <errorMessage>Manual update on Payable Amount is not allowed once the MR Claim Payable is generated. Please decline this and create a new payable with the corrected amount.</errorMessage>
</ValidationRule>