force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__ReconScheduleMandatoryForUtilPayables.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ReconScheduleMandatoryForUtilPayables</fullName>
    <active>true</active>
    <errorConditionFormula>AND(isPickVal(leaseworks__Payable_Type__c,&apos;MR Reconciliation Refund&apos;),
OR(ISNULL(leaseworks__Reconciliation_Schedule__c),ISBLANK(leaseworks__Reconciliation_Schedule__c)))</errorConditionFormula>
    <errorMessage>Please select a Reconciliation Schedule to be able to create a refund for the MR reconciliation amount</errorMessage>
</ValidationRule>