force-app/main/default/objects/leaseworks__Payable__c/validationRules/leaseworks__UtilizationMandatoryForMRTrueUpPayables.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__UtilizationMandatoryForMRTrueUpPayables</fullName>
    <active>true</active>
    <errorConditionFormula>AND(isPickVal(leaseworks__Payable_Type__c,&apos;MR TrueUp&apos;),
OR(ISNULL(leaseworks__Utilization_Report__c),ISBLANK(leaseworks__Utilization_Report__c)),
NOT(ISPICKVAL(leaseworks__Status__c ,&apos;Cancelled&apos;)),
NOT(ISPICKVAL(leaseworks__Status__c , &apos;Declined&apos;)))</errorConditionFormula>
    <errorMessage>Please select a Utilization to be able to create a refund for the MR TrueUp amount</errorMessage>
</ValidationRule>