force-app/main/default/objects/leaseworks__Payable__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Payable_Type__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Payable_Amount__c</columns>
    <columns>leaseworks__Payable_Amount_Paid_Cash__c</columns>
    <columns>leaseworks__Payable_Balance__c</columns>
    <columns>leaseworks__Payment_Status__c</columns>
    <columns>leaseworks__Lessee_New__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Cancelled</value>
    </filters>
    <label>All</label>
</ListView>